@@ -1,5 +1,8 @@
 - urpmi.addmedia:
   o disable non-free repository by default for Free edition (#40033)
+-urpmi:
+  o when using --update, allow package dependencies to be fetched from
+    non-update media (#51268)
 
 Version 6.34 - 25 January 2010
 
